# rag-space

./: .env.template  .gitignore  README.md  pyproject.toml
notebooks/: test_rag.ipynb
src/: config.py  main.py  schemas.py
src/api/: __init__.py  documents.py
src/services/: embedding_service.py  vectore_store.py
src/utils/: documetns.py
