[project]
name = "rag-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-community>=0.3.25",
    "langchain-ollama>=0.3.3",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
